# poetry-generation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  res.dvc  run.py  techstack.md  techstack.yml
.dvc/: config
configs/: config.yaml
configs/callbacks/: default.yaml
configs/datamodule/: default.yaml  emotion.yaml  stanza.yaml
configs/experiment/: emotion.yaml  stanza.yaml
configs/model/: default.yaml  empath.yaml  poet.yaml
configs/trainer/: default.yaml
poetry_generation/: train.py
poetry_generation/datamodules/: emotion_datamodule.py  stanza_datamodule.py
poetry_generation/datamodules/datasets/: emotion_dataset.py
poetry_generation/models/: empath_lightning.py  poet_lightning.py
poetry_generation/models/modules/: emotion_classification_head.py  emotion_classifier.py  empath.py
poetry_generation/utils/: collator.py  poem_miner.py  poem_processor.py
res/: tokenizer.dvc
res/data/: .gitignore  NRC-PL.json.dvc
res/data/cortex/: .gitignore  val-emotion.tsv.dvc
res/data/emotions/artemis/: .gitignore  README.txt.dvc  artemis_dataset_release_v0.csv.dvc
res/data/emotions/emotion-classification-text/cortex/: test-emotion.tsv.dvc  train-emotion.tsv.dvc
res/data/emotions/image-generation/: .gitignore  WikiArt-Emotions.dvc
res/data/poems/: .gitignore  asnyk.jsonl  lines.csv  stanzas.csv.dvc
res/model/roberta/: base-vanilla.dvc
res/models/roberta/: .gitignore
res/tokenizer/gpt2/: .gitignore
res/tokenizers/gpt2/: generation.dvc
res/tokenizers/roberta/: classification.dvc
src/: train.py
src/datamodules/: stanza_datamodule.py
src/datamodules/datasets/: stanza_dataset.py
src/models/: poet_lightning.py  poet_model.py
src/models/modules/: classifier.py
src/utils/: poem_miner.py  poemsminer.py  utils.py
